# SPDX-FileCopyrightText: 2023 Maik Fox <maik.fox@gmail.com>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "import_converter"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.1"
glob = "0.3.1"
kamadak-exif = "0.5.5"
chrono ="0.4.31"
#mp4 = "0.14.0"
# change back to official create when changes to avc1.rs are integrated into 0.15.0
mp4 = {git = "https://github.com/alfg/mp4-rust.git", branch = "master"}
